<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_detail_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/text_idbill"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/id_order"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center" />
        <TextView
            android:id="@+id/text_date"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/datebook"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:singleLine="true"
            />
        <TextView
            android:id="@+id/text_status"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:singleLine="true"
            />
        <ImageView
            android:id="@+id/btn_editt"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:background="@drawable/iconeddit"/>
    </LinearLayout>

</LinearLayout>