<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.useraccount.UserAccountFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/size100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_layout"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="@dimen/size10dp"
                    android:background="@drawable/iconu" />

                <TextView
                    android:id="@+id/text_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Name"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/size10dp"
                    android:background="@drawable/btn"
                    android:text="@string/edit" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size10dp"
                android:text="@string/user"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_layout"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layout_rules"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/size50dp"
                        android:layout_height="@dimen/size50dp"
                        android:background="@drawable/iconrules" />

                    <TextView
                        android:id="@+id/text_rules"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/size10dp"
                        android:text="@string/rules"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_repass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/size50dp"
                        android:layout_height="@dimen/size50dp"
                        android:background="@drawable/iconrepassword" />

                    <TextView
                        android:id="@+id/text_repass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/size10dp"
                        android:text="@string/repass"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_help"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/size50dp"
                        android:layout_height="@dimen/size50dp"
                        android:background="@drawable/iconquestion" />

                    <TextView
                        android:id="@+id/text_help"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/size10dp"
                        android:text="@string/help"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_delete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/size50dp"
                        android:layout_height="@dimen/size50dp"
                        android:background="@drawable/icondeleteuser" />

                    <TextView
                        android:id="@+id/text_delete_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/size10dp"
                        android:text="@string/deleteuser"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/size50dp"
                        android:layout_height="@dimen/size50dp"
                        android:background="@drawable/iconlogout" />

                    <TextView
                        android:id="@+id/text_logout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/size10dp"

                        android:text="@string/logout"
                        android:textColor="@color/black" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>