<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nenn"
    tools:context=".ui.order.OrderFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:background="@drawable/custom_table"
            >
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/id_order"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="@dimen/size10dp"
                android:background="@drawable/custom_table"/>
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/datebook"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="@dimen/size10dp"
                android:singleLine="true"
                android:background="@drawable/custom_table"
                />
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="@dimen/size10dp"
                android:singleLine="true"
                android:background="@drawable/custom_table" />
         </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/custom_table"
            android:layout_margin="5dp">
        </LinearLayout>


                <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10dp"
            android:id="@+id/list_order_recy"
            tools:ignore="MissingConstraints"
                    android:background="@drawable/custom_table"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>