<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nenn">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:layout_width="@dimen/size100dp"
        android:layout_height="@dimen/size100dp"
        android:background="@drawable/iconapp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/size50dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repass"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size10dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="@dimen/size10dp"
            android:background="@drawable/iconlock"></ImageView>

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="@dimen/size10dp"
            android:background="@drawable/custom_txt"
            android:hint="@string/matkhau"
            android:password="true"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/grey" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size10dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="@dimen/size10dp"
            android:background="@drawable/iconrepassword"></ImageView>

        <EditText
            android:id="@+id/txt_repassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="@dimen/size10dp"
            android:background="@drawable/custom_txt"

            android:hint="@string/newpas"
            android:password="true"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/grey" />
    </LinearLayout>
    <Button
        android:id="@+id/button_change_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Đổi mật khẩu"
        android:background="@drawable/btn"/>
</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>